@@ -3,18 +3,16 @@ package net.causw.config.swagger;
 import net.causw.domain.model.util.StaticValue;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import springfox.documentation.service.*;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.builders.ApiInfoBuilder;
 import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
-import springfox.documentation.service.ApiInfo;
-import springfox.documentation.service.ApiKey;
-import springfox.documentation.service.AuthorizationScope;
-import springfox.documentation.service.SecurityReference;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -31,7 +29,20 @@ public class SwaggerConfig {
                 .apiInfo(this.apiInfo())
                 .useDefaultResponseMessages(false)
                 .securityContexts(Collections.singletonList(securityContext()))
-                .securitySchemes(List.of(apiKey()));
+                .securitySchemes(List.of(apiKey()))
+                .globalOperationParameters(buildGlobalOperationParameters());
+    }
+
+    private List<Parameter> buildGlobalOperationParameters() {
+        return Arrays.asList(
+                new springfox.documentation.builders.ParameterBuilder()
+                        .name("Authorization")
+                        .description("JWT token")
+                        .modelRef(new springfox.documentation.schema.ModelRef("string"))
+                        .parameterType("header")
+                        .required(true)
+                        .build()
+        );
     }
 
     private ApiInfo apiInfo() {
@@ -47,13 +58,10 @@ public class SwaggerConfig {
     }
 
     private SecurityContext securityContext() {
-        return springfox
-                .documentation
-                .spi.service
-                .contexts
-                .SecurityContext
-                .builder()
-                .securityReferences(defaultAuth()).forPaths(PathSelectors.any()).build();
+        return SecurityContext.builder()
+                .securityReferences(defaultAuth())
+                .forPaths(PathSelectors.any())
+                .build();
     }
 
     List<SecurityReference> defaultAuth() {
